<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.RegisterActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tb_register"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
        </androidx.appcompat.widget.Toolbar>

        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:hint="@string/user_name"
            android:padding="5dp"
            android:textColor="@color/black"
            android:id="@+id/et_register_name"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/style_card_type"
            android:layout_below="@+id/tb_register"
            android:inputType="text"
            android:layout_centerHorizontal="true"
            tools:ignore="Autofill,TextFields">
        </EditText>

        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:hint="@string/password"
            android:padding="5dp"
            android:textColor="@color/black"
            android:id="@+id/et_register_password"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/style_card_type"
            android:layout_below="@+id/et_register_name"
            android:inputType="textPassword"
            android:layout_centerHorizontal="true"
            tools:ignore="Autofill,TextFields">
        </EditText>

        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:hint="@string/phone"
            android:padding="5dp"
            android:textColor="@color/black"
            android:id="@+id/et_register_phone"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/style_card_type"
            android:layout_below="@+id/et_register_password"
            android:inputType="text"
            android:layout_centerHorizontal="true"
            tools:ignore="Autofill,TextFields">
        </EditText>
        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:hint="@string/captcha"
            android:padding="5dp"
            android:textColor="@color/black"
            android:id="@+id/et_register_captcha"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/style_card_type"
            android:layout_below="@+id/et_register_phone"
            android:inputType="text"
            android:layout_centerHorizontal="true"
            tools:ignore="Autofill">
        </EditText>
        <TextView
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_below="@+id/et_register_captcha"
            android:layout_alignEnd="@+id/et_register_captcha"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="60dp"
            android:layout_alignParentEnd="true"
            android:text="@string/send_captcha"
            android:textSize="15sp"
            android:textColor="@color/teal_700"
            android:id="@+id/tv_send_captcha"
            android:foreground="?android:attr/selectableItemBackground"
            tools:ignore="UnusedAttribute">
        </TextView>
        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_register_captcha"
            android:layout_centerHorizontal="true"
            android:text="@string/to_register"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:background="@drawable/sytle_button"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_marginTop="50dp"
            android:id="@+id/bt_login"
            tools:ignore="UnusedAttribute">
        </Button>

    </RelativeLayout>
</layout>