<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.LoginActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tb_login"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
        </androidx.appcompat.widget.Toolbar>

        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:hint="@string/phone"
            android:padding="5dp"
            android:textColor="@color/black"
            android:id="@+id/et_login_phone"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/style_card_type"
            android:layout_below="@+id/tb_login"
            android:inputType="text"
            android:layout_centerHorizontal="true"
            tools:ignore="Autofill,TextFields">
        </EditText>
        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:hint="@string/captcha"
            android:padding="5dp"
            android:textColor="@color/black"
            android:id="@+id/et_login_captcha"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/style_card_type"
            android:layout_below="@+id/et_login_phone"
            android:inputType="text"
            android:layout_centerHorizontal="true"
            tools:ignore="Autofill">
        </EditText>
        <TextView
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_below="@+id/et_login_captcha"
            android:layout_alignEnd="@+id/et_login_captcha"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="60dp"
            android:layout_alignParentEnd="true"
            android:text="@string/send_captcha"
            android:textSize="15sp"
            android:textColor="@color/teal_700"
            android:id="@+id/tv_send_captcha"
            android:foreground="?android:attr/selectableItemBackground"
            tools:ignore="UnusedAttribute">
        </TextView>
        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_login_captcha"
            android:layout_centerHorizontal="true"
            android:text="@string/to_login"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:background="@drawable/sytle_button"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_marginTop="50dp"
            android:id="@+id/bt_login"
            tools:ignore="UnusedAttribute">
        </Button>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bt_login"
            android:layout_alignStart="@+id/bt_login"
            android:text="@string/remember_password"
            android:id="@+id/cb_login_remember_password">
        </CheckBox>
        <TextView
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_below="@+id/cb_login_remember_password"
            android:layout_marginTop="10dp"
            android:layout_alignParentEnd="true"
            android:text="新用户注册"
            android:textSize="15sp"
            android:textColor="@color/teal_700"
            android:id="@+id/tv_login_register"
            android:foreground="?android:attr/selectableItemBackground"
            tools:ignore="UnusedAttribute">
        </TextView>
    </RelativeLayout>
</layout>