<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <androidx.drawerlayout.widget.DrawerLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/drawer_layout_base_activity">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/tb_search"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/white"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
            </androidx.appcompat.widget.Toolbar>

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/vp_bottom_bar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="?attr/actionBarSize">
            </androidx.viewpager.widget.ViewPager>
            <com.google.android.material.tabs.TabLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:id="@+id/tab_bottom_bar"
                app:tabIndicatorHeight="0dp"
                android:orientation="horizontal"
                android:background="@color/white"
                android:layout_alignParentBottom="true">
            </com.google.android.material.tabs.TabLayout>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/sidebar_base_activity"
            android:layout_gravity="start"
            android:background="@color/white"
            android:padding="10dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:background="@drawable/style_card_type"
                android:id="@+id/user_information"
                android:padding="10dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:id="@+id/iv_header"
                    tools:ignore="ContentDescription"
                    android:background="@drawable/style_header">
                </ImageView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_user_name_tips"
                    android:text="@string/user_name_tips"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="20dp"
                    android:textSize="20sp"
                    android:layout_toEndOf="@+id/iv_header">
                </TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_user_name"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@+id/tv_user_name_tips"
                    android:text=""
                    android:textSize="20sp">
                </TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender_tips"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="50dp"
                    android:layout_marginStart="20dp"
                    android:layout_toEndOf="@+id/iv_header"
                    android:id="@+id/tv_gender_tips"
                    android:textSize="20sp">
                </TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="50dp"
                    android:layout_toEndOf="@+id/tv_gender_tips"
                    android:text=""
                    android:textSize="20sp">
                </TextView>

            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:background="@drawable/style_card_type"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:layout_below="@+id/user_information"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="33dp"
                    android:text="@string/fix">
                </TextView>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black">
                </View>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="33dp"
                    android:text="@string/recent_browsing">
                </TextView>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black">
                </View>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="33dp"
                    android:text="@string/exit_login">
                </TextView>



            </LinearLayout>


        </RelativeLayout>

    </androidx.drawerlayout.widget.DrawerLayout>

</layout>